just to sync to my main pc (NOT WORKING)

--- a/SkEditor-Custom-Background/CustomBackgroundAddon.csproj
+++ b/SkEditor-Custom-Background/CustomBackgroundAddon.csproj
@@ -34,6 +34,10 @@
         <PackageReference Include="Svg.Skia" Version="3.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Views\Windows\Settings\" />
+    </ItemGroup>
+
     <Target Name="PostBuild" AfterTargets="Build">
         <Copy SourceFiles="$(TargetDir)$(TargetFileName)" DestinationFolder="$(AppData)\SkEditor\Addons\$(AssemblyName)\" />
     </Target>
