--- a/SkEditor-Custom-Background/CustomBackgroundAddon.csproj
+++ b/SkEditor-Custom-Background/CustomBackgroundAddon.csproj
@@ -9,10 +9,6 @@
         <AssemblyName>de.max54nj.customBackground</AssemblyName>
     </PropertyGroup>
 
-    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-        <OutputPath>out/release</OutputPath>
-    </PropertyGroup>
-
     <ItemGroup>
         <AvaloniaResource Include="Assets\**\*" />
     </ItemGroup>
@@ -29,8 +25,9 @@
         <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.3.0" />
         <PackageReference Include="Avalonia.Svg.Skia" Version="11.3.0" />
         <PackageReference Include="FluentIcons.Avalonia.Fluent" Version="1.1.303" />
+        <PackageReference Include="Max54nj.SkEditor.Bookbinder" Version="1.0.0.8" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="SkEditor" Version="2.9.3" />
+        <PackageReference Include="SkEditor" Version="2.9.3.2" />
         <PackageReference Include="Svg.Skia" Version="3.0.3" />
     </ItemGroup>
 
