feat: add opacity option and rewrite style overrides

--- a/SkEditor-Custom-Background/CustomBackgroundAddon.csproj
+++ b/SkEditor-Custom-Background/CustomBackgroundAddon.csproj
@@ -26,12 +26,15 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.3.0" />
+        <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.3.7" />
         <PackageReference Include="Avalonia.Svg.Skia" Version="11.3.0" />
-        <PackageReference Include="FluentIcons.Avalonia.Fluent" Version="1.1.303" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="SkEditor" Version="2.9.3" />
-        <PackageReference Include="Svg.Skia" Version="3.0.3" />
+        <PackageReference Include="FluentIcons.Avalonia.Fluent" Version="1.1.311" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+        <PackageReference Include="Svg.Skia" Version="3.2.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\SkEditor\SkEditor\SkEditor.csproj" />
     </ItemGroup>
 
     <Target Name="PostBuild" AfterTargets="Build">
